<resources>
    <string name="app_name">CovidApp</string>
    <string name="guardar">Guardar</string>
    <string name="registrar">Registrar</string>
    <string name="borrar">Borrar</string>
    <string name="salir">Salir</string>
    <string name="nombre">Nombre</string>
    <string name="eps">Eps</string>
    <string name="motivo">Motivo</string>
    <string name="direccion">Dirección</string>
    <string name="numero">Número</string>
    <string name="contacto">Contacto</string>
    <string name="sexo">Sexo</string>
    <string name="Antecedentes">Antecedentes</string>
    <string name="sintomas">Síntomas</string>
    <string name="covid">Covid</string>
    <string name="registrar_paciente">Formulario Paciente</string>
    <string name="sura">Sura</string>
    <string name="coomeva">Coomeva</string>
    <string name="susalud">Susalud</string>
    <string name="cafe_salud">Cafesalud</string>
    <string name="hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="tos">Tos</string>
    <string name="gripa">Gripe</string>
    <string name="dolor_cabeza">Dolor</string>
    <string name="fatiga">Fatiga</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="guardado">Paciente guardado con éxito</string>
    <string name="helicoptero">Helicóptero Apache</string>
    <string name="iniciar">INICIAR</string>
    <string name="bienvendida">Bienvenido a la CovidApp!</string>
    <string name="nuevo_user">Eres nuevo? Registrate</string>
    <string name="olvido_contrasena">Olvidaste tu contraseña?</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registrate">Registrate para ingresar a la App</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="ya_registrado">¿Ya estás registrado? haz clic para entrar</string>
    <string name="detalle_paciente">Detalle de Paciente</string>
    <string name="mensaje_guardado">Paciente guardado exitosamente!</string>
    <string name="positivo">Positivo</string>
    <string name="negativo">Negativo</string>
    <string name="sin_sintomas">Sin síntomas</string>
    <string name="incierto">Incierto</string>
    <string name="mensaje_error">Por favor complete el campo requerido</string>
    <string name="eliminar_paciente">Eliminar paciente</string>
    <string name="seguro">¿Estás seguro de que quieres eliminar a este paciente?</string>

    <string-array name="epsSp">
        <item>@string/sura</item>
        <item>@string/coomeva</item>
        <item>@string/susalud</item>
        <item>@string/cafe_salud</item>
    </string-array>

    <string-array name="sexoSp">
        <item>@string/hombre</item>
        <item>@string/Mujer</item>
        <item>@string/helicoptero</item>
    </string-array>

</resources>